@@ -1,11 +1,12 @@
 
-$Id: changes.txt,v 1.80 2006/06/07 12:58:49 qqshka Exp $
+$Id: changes.txt,v 1.81 2006/06/07 13:57:32 disconn3ct Exp $
 
 ----
 MVDSV v0.19.25-CVS build 23?? (2006.06.??)
 * disconnect <disconn3ct@users.sourceforge.net>
 - for developers: move FS-related stuff from common.c to fs.c
 - small fixes and cleanups here and there
+- DragonFly BSD targets
 
 * qqshka <qqshka@users.sourceforge.net>
 - new cvar vip_values which control which vip value assign for particular
